--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -4,3 +4,5 @@
     - 'Fallback for APP_ENV variable. Compile CSS again if ./storage/temp has been cleared.'
 1.0.2:
     - 'Change path for compiled CSS file from ./storage/temp to ./storage/temp/public.'
+1.0.3:
+    - 'Automatically clear cached styles ( colors ) if `.env` file has been updated.'
