--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Tobias Forkel",
-            "email": "tobias@magenizr.com",
+            "email": "tobias@magenizr.com"
         }
     ],
     "require": {
