--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -32,4 +32,4 @@ tabs:
                         span: storm
                         cssClass: col-md-9
                         type: colorpicker
-                        availableColors: [#16a085, #27ae60, #3498db, #9b59b6, #34495e, #f39c12, #e67e22, #e74c3c, #708598, #4f5458]
+                        availableColors: ['#16a085', '#27ae60', '#3498db', '#9b59b6', '#34495e', '#f39c12', '#e67e22', '#e74c3c', '#708598', '#4f5458']
