--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Tobias Forkel",
-            "email": "tobias@magenizr.com"
+            "name": "Magenizr",
+            "email": "support@magenizr.com.au"
         }
     ],
     "require": {
