--- a/plugin.yaml
+++ b/plugin.yaml
@@ -3,4 +3,4 @@ plugin:
     description: 'magenizr.envbar::lang.plugin.description'
     author: 'Magenizr'
     icon: oc-icon-bullhorn
-    homepage: 'https://www.magenizr.com'
+    homepage: 'https://www.magenizr.com.au'
